# chops-tui

./: .gitignore  README.md  pyproject.toml
src/chops_tui/: __init__.py  __main__.py  app.py  chops.tcss  models.py  parser.py  scanner.py  watcher.py
src/chops_tui/widgets/: detail.py  new_skill.py  sidebar.py  skill_list.py
